# CommandBlockCompilerv2

./: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  Integer.cpp  Integer.h  Position.cpp  Position.h  main.cpp
Operations/: If.cpp  If.h  Operation.cpp  Operation.h
